--- a/assets/less/screen.less
+++ b/assets/less/screen.less
@@ -67,7 +67,6 @@ h3{
       color: blue;
       background-color: #FFF;
       height:  @font-size*@line-height*@lines-to-show + 22;
-      padding-top: 15px;
       text-align:center;
       text-transform: uppercase;
       font-size: @font-size;
@@ -115,7 +114,7 @@ h3{
   right:0;
   background-color: #FFF; 
   overflow:scroll;
-  padding: 20px 50px;
+  padding: 40px 50px;
 
   #handle {
       width: 100%;
@@ -150,6 +149,21 @@ h3{
 
 .col-xs-2{
   width:9.44%;
+}
+
+.highlight {
+    background-color: #fff34d;
+    -moz-border-radius: 5px; /* FF1+ */
+    -webkit-border-radius: 5px; /* Saf3-4 */
+    border-radius: 5px; /* Opera 10.5, IE 9, Saf5, Chrome */
+    -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.7); /* FF3.5+ */
+    -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.7); /* Saf3.0+, Chrome */
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.7); /* Opera 10.5+, IE 9.0 */
+}
+
+.highlight {
+    padding:1px 4px;
+    margin:0 -4px;
 }
 
 
